--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "dotenv": "^16.4.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
